--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,10 @@
   --main-font: "Open Sans", sans-serif;
   /* Colors */
   --main-color: #3381f3;
+  --second-color: #2768ca;
+}
+body {
+  font-family: var(--main-font);
 }
 /* Header */
 header.container {
@@ -24,7 +28,8 @@ header.container {
   position: fixed;
   top: 0;
   z-index: 1;
-  height: auto;
+  height: 60px;
+  font-size: 1.1rem;
 }
 header.container img {
   height: 50px;
@@ -37,8 +42,7 @@ nav.menu ul li a {
   margin: 0 4px;
   padding: 10px;
   text-decoration: none;
-  color: #444;
-  font: 1rem var(--main-font);
+  color: #333;
   text-transform: uppercase;
   transition: all 0.3s;
 }
@@ -46,3 +50,179 @@ nav.menu ul li a:hover {
   color: var(--main-color);
 }
 /* //Header */
+/* Banner */
+main section.main-banner {
+  background: var(--main-color) url(../images/banner6.jpg) no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+  position: relative;
+  margin-top: 60px;
+}
+section.main-banner .banner-container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 16rem 0;
+  position: relative;
+  text-align: center;
+}
+section.main-banner .text h1 {
+  font: 3rem var(--title-font);
+}
+section.main-banner .text p {
+  margin-top: 2em;
+  margin-bottom: 4em;
+  font-size: 1.2em;
+  font-weight: 300;
+}
+#search-form {
+  display: flex;
+  justify-content: center;
+}
+#search-form input,
+#search-form select {
+  background-color: #fff;
+  border-radius: 5px;
+  border-color: transparent;
+  outline-color: var(--main-color);
+  font-size: 1.2em;
+  padding: 10px 20px;
+  margin: 0 10px;
+}
+#search-form input[type="submit"] {
+  text-transform: uppercase;
+  background-color: var(--main-color);
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+#search-form input[type="submit"]:hover {
+  background-color: var(--second-color);
+}
+/* //Banner */
+/* Latest Jobs */
+section.latest-jobs {
+  margin: 0 auto;
+  padding: 6em 2em;
+  position: relative;
+  max-width: 1200px;
+}
+section.latest-jobs h1 {
+  font-size: 2em;
+  margin-bottom: 3em;
+  text-align: center;
+  text-transform: capitalize;
+}
+section.latest-jobs ul {
+  list-style: none;
+  border-radius: 10px;
+  list-style: none;
+  border: 1px solid var(--main-color);
+}
+section.latest-jobs ul li {
+  position: relative;
+  padding: 10px 20px;
+  border-bottom: 1px solid var(--main-color);
+  border-top: 1px solid var(--main-color);
+}
+section.latest-jobs ul li:first-child,
+section.latest-jobs ul li:last-child {
+  border: none;
+}
+section.latest-jobs .job {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #333;
+}
+section.latest-jobs .job,
+section.latest-jobs .company-box,
+section.latest-jobs .job .locality {
+  display: flex;
+  align-items: center;
+}
+section.latest-jobs .company-box {
+  width: 40%;
+  justify-content: space-between;
+}
+section.latest-jobs .company-box img {
+  width: 100px;
+}
+section.latest-jobs .info {
+  width: 60%;
+}
+section.latest-jobs .info h2 {
+  font-weight: 300;
+  margin-bottom: 5px;
+}
+section.latest-jobs .info p {
+  font-weight: 600;
+}
+section.latest-jobs .job .locality {
+  justify-content: center;
+  width: 30%;
+}
+section.latest-jobs .job .type {
+  text-align: center;
+  width: 30%;
+}
+section.latest-jobs .job .type span {
+  width: 70%;
+  display: block;
+  border-radius: 5px;
+  font-weight: 600;
+  color: #fff;
+  text-transform: uppercase;
+  float: right;
+}
+.job .type span.clt {
+  background-color: #735fee;
+}
+.job .type span.pj {
+  background-color: #5bbc2e;
+}
+.job .type span.home-office {
+  background-color: #ff5a5f;
+}
+/* Button */
+
+/* //Latest Jobs */
+@media screen and (max-width: 860px) {
+  main section.main-banner {
+    background-position: right bottom;
+  }
+  #search-form {
+    flex-direction: column;
+  }
+  #search-form input,
+  #search-form select {
+    margin: 10px 10px;
+  }
+  section.latest-jobs .job,
+  section.latest-jobs .company-box {
+    flex-direction: column;
+    text-align: center;
+  }
+  section.latest-jobs .job {
+    justify-content: center;
+  }
+  section.latest-jobs .company-box img {
+    width: 200px;
+  }
+  section.latest-jobs .job .locality {
+    width: 100%;
+  }
+  section.latest-jobs .job .type span {
+    margin: auto;
+    display: block;
+  }
+}
+@media screen and (max-width: 375px) {
+  /* Banner */
+  section.main-banner .text h1 {
+    font-size: 2em;
+  }
+  #search-form input,
+  #search-form select {
+    font-size: 1em;
+  }
+}
