--- a/styles/index.css
+++ b/styles/index.css
@@ -111,10 +111,11 @@ section.b-container {
   max-width: 1200px;
 }
 section.latest-jobs h1 {
-  font-size: 2em;
-  margin-bottom: 2em;
+  font-size: 2.5em;
+  margin-bottom: 1.5em;
   text-align: center;
-  text-transform: capitalize;
+  font-family: var(--title-font);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 section.latest-jobs ul {
   list-style: none;
@@ -225,9 +226,10 @@ div.b-container .text {
   font-weight: 600;
 }
 section.send-job h1 {
-  text-transform: capitalize;
-  font-size: 2em;
+  font-size: 2.5em;
   margin-bottom: 40px;
+  font-family: var(--title-font);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 section.send-job p {
   font-size: 1.1em;
@@ -257,16 +259,33 @@ section.send-job a:hover {
 }
 .statistics h1 {
   margin: 1em 0;
+  font-size: 2.5em;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  font-family: var(--title-font);
 }
 .statistics p {
-  margin: 1.2em;
+  margin: 2.5em 0;
 }
 .stats {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .stats-box {
-  padding: 30px;
+  width: 25%;
+  border-left: 2px solid #666;
+  border-right: 2px solid #666;
+}
+.stats-box span {
+  margin: 1em 0;
+}
+.stats-box p {
+  margin: 1em 0;
+}
+.stats-box:nth-child(even) {
+  border: none;
+}
+.stats-box:last-child {
+  border-right: 2px solid #666;
 }
 .stats-box span {
   color: #666;
