styled blog section

--- a/styles/index.css
+++ b/styles/index.css
@@ -266,6 +266,7 @@ section.send-job a:hover {
 }
 .statistics p {
   margin: 2.5em 0;
+  font-size: 1.2em;
 }
 .stats {
   display: flex;
@@ -361,17 +362,58 @@ section.testimony div.box p:last-child {
 }
 /* //Testimony */
 /* Blog */
-section.blog {
+section.blog h1 {
+  font-size: 2.5em;
+  text-align: center;
+  margin-bottom: 40px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+section.blog p {
+  font-size: 1.2em;
+  text-align: center;
+  margin-bottom: 40px;
+  color: #555;
 }
 div.articles {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+}
+article.box h2 a {
+  color: #666;
+  margin: 10px 0;
+  text-decoration: none;
+}
+article.box p {
+  font-size: 1em;
+  text-align: left;
+}
+article.box p.info {
+  text-align: left;
+  font-size: 0.8em;
+  margin: 10px 0;
 }
 article.box {
   width: 30%;
+  border: 2px solid var(--main-color);
+  padding: 15px;
+  border-radius: 10px;
 }
 article.box img {
   width: 100%;
+  border-radius: 5px;
+}
+article.box a.read {
+  background-color: var(--main-color);
+  text-transform: uppercase;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  display: block;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
 }
 @media screen and (max-width: 860px) {
   main section.main-banner {
