--- a/styles/index.css
+++ b/styles/index.css
@@ -417,6 +417,41 @@ article.box a.read {
   width: 80%;
   margin: 0 auto;
 }
+/* Footer */
+footer.container {
+  color: #fff;
+  background-color: #3c3c3c;
+  text-align: center;
+  padding: 3em 0 0;
+  position: relative;
+  bottom: 0;
+}
+footer.container div.main p {
+  font-size: 1.2em;
+  text-transform: capitalize;
+  padding: 10px 0;
+}
+footer.container div.social-links i {
+  font-size: 2em;
+  padding: 15px 0;
+  color: #fff;
+}
+footer.container div.social-links i:hover {
+  color: var(--second-color);
+}
+footer.container div.copyright {
+  font-size: 1em;
+  background-color: #333;
+}
+footer.container div.copyright a {
+  color: #a7a7a7;
+  text-decoration: none;
+}
+footer.container div.copyright a:hover {
+  color: #c9c9c9;
+  text-decoration: underline;
+}
+/* //Footer */
 @media screen and (max-width: 860px) {
   main section.main-banner {
     background-position: right bottom;
