Refactoring the home pagebackup

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,8 +11,8 @@ html {
   --title-font: "Bebas Neue", cursive;
   --main-font: "Open Sans", sans-serif;
   /* Colors */
-  --main-color: #3381f3;
-  --second-color: #2768ca;
+  --primary-color: #053b8e;
+  --secondary-color: #0c5fdc;
 }
 body {
   font-family: var(--main-font);
@@ -51,12 +51,12 @@ nav.menu ul li a {
   transition: all 0.3s;
 }
 nav.menu ul li a:hover {
-  color: var(--main-color);
+  color: var(--primary-color);
 }
 /* //Header */
 /* Banner */
 main section.main-banner {
-  background: var(--main-color) url(../images/banner6.jpg) no-repeat;
+  background: var(--primary-color) url(../images/banner6.jpg) no-repeat;
   background-size: cover;
   background-position: center bottom;
   position: relative;
@@ -89,20 +89,20 @@ section.main-banner .text p {
   background-color: #fff;
   border-radius: 5px;
   border-color: transparent;
-  outline-color: var(--main-color);
+  outline-color: var(--primary-color);
   font-size: 1.2em;
   padding: 10px 20px;
   margin: 0 10px;
 }
 #search-form input[type="submit"] {
   text-transform: uppercase;
-  background-color: var(--main-color);
+  background-color: var(--primary-color);
   color: #fff;
   cursor: pointer;
   transition: all 0.3s;
 }
 #search-form input[type="submit"]:hover {
-  background-color: var(--second-color);
+  background-color: var(--secondary-color);
 }
 /* //Banner */
 /* Latest Jobs */
@@ -119,16 +119,15 @@ section.latest-jobs h1 {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 section.latest-jobs ul {
-  list-style: none;
   border-radius: 10px;
   list-style: none;
-  border: 1px solid var(--main-color);
+  border: 1px solid var(--primary-color);
 }
 section.latest-jobs ul li {
   position: relative;
   padding: 10px 20px;
-  border-bottom: 1px solid var(--main-color);
-  border-top: 1px solid var(--main-color);
+  border-bottom: 1px solid var(--primary-color);
+  border-top: 1px solid var(--primary-color);
 }
 section.latest-jobs ul li:first-child,
 section.latest-jobs ul li:last-child {
@@ -139,22 +138,22 @@ section.latest-jobs .job {
   height: 100%;
   text-decoration: none;
   color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-section.latest-jobs .job,
 section.latest-jobs .company-box,
-section.latest-jobs .job .locality {
+section.latest-jobs .job .locality,
+.job .details {
   display: flex;
   align-items: center;
 }
 section.latest-jobs .company-box {
+  gap: 10px;
   width: 40%;
-  justify-content: space-between;
 }
 section.latest-jobs .company-box img {
   width: 100px;
-}
-section.latest-jobs .info {
-  width: 60%;
 }
 section.latest-jobs .info h2 {
   font-weight: 300;
@@ -165,14 +164,21 @@ section.latest-jobs .info p {
 }
 section.latest-jobs .job .locality {
   justify-content: center;
-  width: 30%;
+}
+section.latest-jobs .job .details {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  width: 55%;
+}
+section.latest-jobs .job .type {
+  width: 200px;
 }
 section.latest-jobs .job .type {
   text-align: center;
-  width: 30%;
 }
 section.latest-jobs .job .type span {
-  width: 70%;
+  width: 80%;
   display: block;
   border-radius: 5px;
   font-weight: 600;
@@ -199,20 +205,20 @@ section.blog a.read {
   margin: 1.5em auto;
   text-align: center;
   text-decoration: none;
-  color: var(--main-color);
+  color: var(--primary-color);
   text-transform: uppercase;
-  border: 3px solid var(--main-color);
+  border: 3px solid var(--primary-color);
   transition: all 0.3s;
 }
 section.latest-jobs .view-more a:hover,
 section.blog a.read:hover {
   color: #fff;
-  background-color: var(--main-color);
+  background-color: var(--primary-color);
 }
 /* //Latest Jobs */
 /* Send vacancy */
 section.send-job {
-  background: var(--main-color) url(../images/banner2.jpg) no-repeat;
+  background: var(--primary-color) url(../images/banner2.jpg) no-repeat;
   background-size: cover;
   padding: 10em 0;
   background-position: left center;
@@ -302,7 +308,7 @@ section.send-job a:hover {
 /* //Statistics */
 /* Testimony */
 section.testimony {
-  background: var(--main-color) url(../images/banner7.jpg) no-repeat;
+  background: var(--primary-color) url(../images/banner7.jpg) no-repeat;
   background-position: center center;
   background-size: cover;
   padding: 6em 0;
@@ -321,12 +327,10 @@ section.testimony p {
   text-align: center;
 }
 section.testimony div.boxes {
+  gap: 10px;
   display: flex;
   justify-content: space-around;
-  margin-top: 4em;
-}
-section.testimony div.box {
-  width: 20%;
+  margin-top: 3em;
 }
 section.testimony div.box img {
   display: block;
@@ -337,7 +341,7 @@ section.testimony div.box img {
 }
 section.testimony div.box p:first-child {
   color: #666;
-  padding: 10px 30px;
+  padding: 20px 30px;
   border-radius: 10px;
   background-color: #fff;
   font-style: italic;
@@ -352,7 +356,7 @@ section.testimony div.box p:first-child::after {
   height: 0;
   width: 0;
   position: absolute;
-  bottom: -20px;
+  bottom: -18px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -376,6 +380,7 @@ section.blog p {
   color: #555;
 }
 div.articles {
+  gap: 10px;
   display: flex;
   justify-content: space-around;
 }
@@ -386,7 +391,7 @@ article.box h2 a {
 }
 article.box p {
   font-size: 1em;
-  text-align: left;
+  text-align: justify;
 }
 article.box p.info {
   text-align: left;
@@ -394,8 +399,7 @@ article.box p.info {
   margin: 10px 0;
 }
 article.box {
-  width: 30%;
-  border: 2px solid var(--main-color);
+  border: 2px solid var(--primary-color);
   padding: 15px;
   border-radius: 10px;
 }
@@ -404,7 +408,7 @@ article.box img {
   border-radius: 5px;
 }
 article.box a.read {
-  background-color: var(--main-color);
+  background-color: var(--primary-color);
   text-transform: uppercase;
   color: #fff;
   padding: 10px 20px;
@@ -415,6 +419,9 @@ article.box a.read {
   text-align: center;
   width: 80%;
   margin: 0 auto;
+}
+article.box a.read:hover {
+  background-color: var(--secondary-color);
 }
 /* Footer */
 footer.container {
@@ -436,7 +443,7 @@ footer.container div.social-links i {
   color: #fff;
 }
 footer.container div.social-links i:hover {
-  color: var(--second-color);
+  color: var(--secondary-color);
 }
 footer.container div.copyright {
   font-size: 1em;
@@ -451,41 +458,23 @@ footer.container div.copyright a:hover {
   text-decoration: underline;
 }
 /* //Footer */
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 780px) {
   main section.main-banner {
     background-position: right bottom;
   }
-  #search-form {
+
+  form#search-form {
+    padding: 5px 10px;
     flex-direction: column;
   }
+
   #search-form input,
   #search-form select {
     margin: 10px 10px;
   }
-  section.latest-jobs .job,
-  section.latest-jobs .company-box {
-    flex-direction: column;
-    text-align: center;
-  }
-  section.latest-jobs .company-box,
-  section.latest-jobs .job .locality,
-  section.latest-jobs .job .type {
-    width: 100%;
-  }
-  section.latest-jobs .job {
-    justify-content: center;
-    gap: 10px;
-  }
-  section.latest-jobs .company-box img {
-    width: 200px;
-  }
+
   section.latest-jobs .job .info h2 {
     font-size: 1.2em;
-  }
-  section.latest-jobs .job .type span {
-    width: 90%;
-    float: none;
-    margin: 0 auto;
   }
   section.latest-jobs .view-more a {
     width: 70%;
@@ -495,6 +484,26 @@ footer.container div.copyright a:hover {
   }
   section.send-job p {
     font-size: 1em;
+  }
+  section.testimony div.boxes {
+    flex-wrap: wrap;
+    columns: 2;
+  }
+  section.testimony div.boxes div.box {
+    width: 40%;
+  }
+}
+@media screen and (max-width: 630px) {
+  section.latest-jobs .job {
+    flex-direction: column;
+    gap: 10px;
+  }
+  section.latest-jobs .job .details {
+    width: 100%;
+  }
+  section.latest-jobs .job .company-box {
+    width: 100%;
+    justify-content: center;
   }
   .stats {
     flex-direction: column;
@@ -510,13 +519,6 @@ footer.container div.copyright a:hover {
     border: transparent;
     border-bottom: 2px solid #666;
   }
-  section.testimony div.boxes {
-    flex-direction: column;
-    align-items: center;
-  }
-  section.testimony div.box {
-    width: 100%;
-  }
   div.articles {
     flex-direction: column;
     align-items: center;
@@ -525,11 +527,14 @@ footer.container div.copyright a:hover {
     width: 100%;
     margin: 10px 0;
   }
+  section.testimony div.boxes div.box {
+    width: 80%;
+  }
   section.blog a.read {
     width: 50%;
   }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 395px) {
   /* Banner */
   section.main-banner .text h1 {
     font-size: 2em;
@@ -537,6 +542,17 @@ footer.container div.copyright a:hover {
   #search-form input,
   #search-form select {
     font-size: 1em;
+  }
+  section.latest-jobs .job .company-box,
+  section.latest-jobs .job .details {
+    flex-direction: column;
+  }
+  section.latest-jobs .job .company-box .info {
+    display: flex;
+    align-items: center;
+  }
+  section.latest-jobs .job .type span {
+    width: 100%;
   }
   article.box a.read {
     width: 80%;
