--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 :root {
   /* Fonts */
   --title-font: "Bebas Neue", cursive;
@@ -14,52 +6,12 @@ html {
   --primary-color: #053b8e;
   --secondary-color: #0c5fdc;
 }
-body {
-  font-family: var(--main-font);
-}
-h1 {
-  font-family: var(--title-font);
-}
-/* Header */
-header.container {
-  width: 100%;
-  padding: 0.4rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid #ccc;
-  background-color: #fff;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  height: 60px;
-  font-size: 1.1rem;
-}
-header.container img {
-  height: 50px;
-}
-nav.menu ul {
-  display: flex;
-  list-style: none;
-}
-nav.menu ul li a {
-  margin: 0 4px;
-  padding: 10px;
-  text-decoration: none;
-  color: #333;
-  text-transform: uppercase;
-  transition: all 0.3s;
-}
-nav.menu ul li a:hover {
-  color: var(--primary-color);
-}
-/* //Header */
+
 /* Banner */
 main section.main-banner {
   background: var(--primary-color) url(../images/banner6.jpg) no-repeat;
   background-size: cover;
   background-position: center bottom;
-  position: relative;
   margin-top: 60px;
 }
 section.main-banner .banner-container {
@@ -136,7 +88,7 @@ section.latest-jobs ul li:last-child {
 section.latest-jobs .job {
   width: 100%;
   height: 100%;
-  text-decoration: none;
+
   color: #333;
   display: flex;
   align-items: center;
@@ -204,7 +156,7 @@ section.blog a.read {
   font-weight: bold;
   margin: 1.5em auto;
   text-align: center;
-  text-decoration: none;
+
   color: var(--primary-color);
   text-transform: uppercase;
   border: 3px solid var(--primary-color);
@@ -213,7 +165,7 @@ section.blog a.read {
 section.latest-jobs .view-more a:hover,
 section.blog a.read:hover {
   color: #fff;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 /* //Latest Jobs */
 /* Send vacancy */
@@ -248,7 +200,7 @@ section.send-job p {
 section.send-job a {
   color: #333;
   padding: 10px 20px;
-  text-decoration: none;
+
   background-color: #fff;
   border-radius: 10px;
   text-transform: uppercase;
@@ -281,8 +233,8 @@ section.send-job a:hover {
 }
 .stats-box {
   width: 25%;
-  border-left: 2px solid #666;
-  border-right: 2px solid #666;
+  border-left: 2px solid rgba(102, 102, 102, 0.5);
+  border-right: 2px solid rgba(102, 102, 102, 0.5);
 }
 .stats-box span {
   margin: 1em 0;
@@ -294,7 +246,7 @@ section.send-job a:hover {
   border: none;
 }
 .stats-box:last-child {
-  border-right: 2px solid #666;
+  border-right: 2px solid rgba(102, 102, 102, 0.5);
 }
 .stats-box span {
   color: #666;
@@ -387,7 +339,6 @@ div.articles {
 article.box h2 a {
   color: #666;
   margin: 10px 0;
-  text-decoration: none;
 }
 article.box p {
   font-size: 1em;
@@ -413,7 +364,7 @@ article.box a.read {
   color: #fff;
   padding: 10px 20px;
   border-radius: 10px;
-  text-decoration: none;
+
   font-weight: 600;
   display: block;
   text-align: center;
@@ -451,7 +402,6 @@ footer.container div.copyright {
 }
 footer.container div.copyright a {
   color: #a7a7a7;
-  text-decoration: none;
 }
 footer.container div.copyright a:hover {
   color: #c9c9c9;
@@ -459,6 +409,9 @@ footer.container div.copyright a:hover {
 }
 /* //Footer */
 @media screen and (max-width: 780px) {
+  header.container img {
+    height: 40px;
+  }
   main section.main-banner {
     background-position: right bottom;
   }
@@ -485,15 +438,29 @@ footer.container div.copyright a:hover {
   section.send-job p {
     font-size: 1em;
   }
+  .stats {
+    flex-wrap: wrap;
+    row-gap: 10px;
+  }
+
+  .stats-box,
+  .stats-box:last-child {
+    width: 49%;
+    border: none;
+  }
+  .stats-box:nth-child(1),
+  .stats-box:nth-child(3) {
+    border-right: 2px solid rgba(102, 102, 102, 0.5);
+  }
+
   section.testimony div.boxes {
     flex-wrap: wrap;
-    columns: 2;
   }
   section.testimony div.boxes div.box {
-    width: 40%;
+    width: 49%;
   }
 }
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 620px) {
   section.latest-jobs .job {
     flex-direction: column;
     gap: 10px;
@@ -514,6 +481,13 @@ footer.container div.copyright a:hover {
     border: transparent;
     border-top: 2px solid #666;
     border-bottom: 2px solid #666;
+  }
+  .stats-box:last-child {
+    width: 100%;
+  }
+  .stats-box:nth-child(1),
+  .stats-box:nth-child(3) {
+    border-right: transparent;
   }
   .stats-box:last-child {
     border: transparent;
@@ -547,6 +521,7 @@ footer.container div.copyright a:hover {
   section.latest-jobs .job .details {
     flex-direction: column;
   }
+
   section.latest-jobs .job .company-box .info {
     display: flex;
     align-items: center;
