--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@ html {
 }
 body {
   font-family: var(--main-font);
+  position: relative;
 }
 h1 {
   font-family: var(--title-font);
@@ -59,7 +60,41 @@ nav.myNav ul li a:focus {
 .closebtn {
   display: none;
 }
-
+/* Footer */
+footer.container {
+  color: #fff;
+  background-color: #3c3c3c;
+  text-align: center;
+  padding: 3em 0 0;
+  position: relative;
+  width: 100%;
+  bottom: 0;
+}
+footer.container div.main p {
+  font-size: 1.2em;
+  text-transform: capitalize;
+  padding: 10px 0;
+}
+footer.container div.social-links i {
+  font-size: 2em;
+  padding: 15px 0;
+  color: #fff;
+}
+footer.container div.social-links i:hover {
+  color: var(--secondary-color);
+}
+footer.container div.copyright {
+  font-size: 1em;
+  background-color: #333;
+}
+footer.container div.copyright a {
+  color: #a7a7a7;
+}
+footer.container div.copyright a:hover {
+  color: #c9c9c9;
+  text-decoration: underline;
+}
+/* //Footer */
 @media screen and (max-width: 780px) {
   header.container img {
     height: 40px;
